--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -15,9 +15,9 @@ jobs:
       fail-fast: false
       matrix:
         config:
-#        - { r: 'devel' }
-#        - { r: 'next'  }
-#        - { r: '4.3.2' }
+        - { r: 'devel' }
+        - { r: 'next'  }
+        - { r: '4.3.2' }
         - { r: '4.2.3' }
         - { r: '4.1.3' }
         - { r: '4.0.5' }
