--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -77,7 +77,7 @@ jobs:
 
   readme:
     if: ${{ always() }}
-    name: Update DEADME
+    name: Update README
     runs-on: ubuntu-latest
     needs: build
 
