--- a/.github/workflows/r-devel-daily.yml
+++ b/.github/workflows/r-devel-daily.yml
@@ -99,7 +99,7 @@ jobs:
 
   readme:
     if: ${{ (github.event.inputs.readme == '' || github.event.inputs.readme == 'yes') && always() }}
-    name: Update DEADME
+    name: Update README
     runs-on: ubuntu-latest
     needs: daily-builds
 
