--- a/examples/sf/Dockerfile
+++ b/examples/sf/Dockerfile
@@ -2,7 +2,7 @@
 FROM rhub/r-minimal
 
 RUN installr -d \
-        -t "openssl-dev linux-headers gfortran proj-dev gdal-dev sqlite-dev geos-dev udunits-dev" \
+        -t "openssl-dev cmake linux-headers gfortran proj-dev gdal-dev sqlite-dev geos-dev udunits-dev" \
 	-a "libssl3 proj gdal geos expat udunits" \
 	sf Rcppcore/Rcpp
 
