--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -15,14 +15,13 @@ jobs:
       fail-fast: false
       matrix:
         config:
-#        - { r: 'devel' }
-#        - { r: 'next'  }
+        - { r: 'devel' }
+        - { r: 'next'  }
         - { r: '4.5.1' }
-#        - { r: '4.3.3' }
-#        - { r: '4.2.3' }
-#        - { r: '4.1.3' }
-#        - { r: '4.0.5' }
-#        - { r: '3.6.3' }
+        - { r: '4.3.3' }
+        - { r: '4.2.3' }
+        - { r: '4.1.3' }
+        - { r: '4.0.5' }
 
     steps:
     - name: Checkout
