--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -7,27 +7,29 @@ jobs:
 
   matrix:
     runs-on: ubuntu-latest
-    name: ${{ matrix.config.r }}
+    name: Setup
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
-    strategy:
-      matrix:
-        config:
-        - { r: 'devel' }
-        - { r: 'next'  }
-        - { r: '4.5.1' }
-        - { r: '4.3.3' }
-        - { r: '4.2.3' }
-        - { r: '4.1.3' }
-        - { r: '4.0.5' }
     steps:
     - id: set-matrix
-      run: echo "matrix=${{ toJson(matrix) }}" >> $GITHUB_OUTPUT
+      run: |
+        matrix=$(echo '
+        [ { "r": "devel" },
+          { "r": "next" },
+          { "r": "4.5.1" },
+          { "r": "4.3.3" },
+          { "r": "4.2.3" },
+          { "r": "4.1.3" },
+          { "r": "4.0.5" } ]
+        ' | jq -c)
+        echo "matrix=$matrix"
+        echo "matrix=$matrix" >> $GITHUB_OUTPUT
 
   amd64:
     needs: matrix
     uses: ./.github/workflows/build-one.yml
     strategy:
+      fail-fast: false
       matrix:
         config: ${{ fromJson(needs.matrix.outputs.matrix) }}
     with:
@@ -40,6 +42,7 @@ jobs:
     needs: matrix
     uses: ./.github/workflows/build-one.yml
     strategy:
+      fail-fast: false
       matrix:
         config: ${{ fromJson(needs.matrix.outputs.matrix) }}
     with:
@@ -52,6 +55,7 @@ jobs:
     needs: [matrix, amd64, arm64]
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         config: ${{ fromJson(needs.matrix.outputs.matrix) }}
     steps:
